--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4" style="text-align: center;">Favorite Recipes!</h1>
+                <h1 class="display-4" style="text-align: center;">Book Reviews!</h1>
             </div>
         </div>
 
@@ -86,7 +86,6 @@
 
                         <input name="alias" type="text" class="form-control" id="alias">
                     </div>
-
 
 
                     <!-- email: email format, not already in database -->
