navbar buttons work, goes to appropriate page

--- a/templates/add.html
+++ b/templates/add.html
@@ -35,7 +35,7 @@
         </span>
 
         <!-- =================== HOME ROUTE ===================== -->
-        <form action="/books" method="get" class="form-inline justify-content-end">
+        <form action="/booksPage" method="get" class="form-inline justify-content-end">
             <button class="btn" type="submit" style="color: white;">home</button>
         </form>
 
@@ -46,7 +46,7 @@
         </form>
     </nav>
 
-    <!-- =================================================================================================== -->
+    <!-- ============================================================================================== -->
 
     <div class="container">
 
@@ -62,7 +62,7 @@
 
                 <!-- form for adding a new book or review  -->
                 <!-- ------------------------------------------------------------- -->
-                <form>
+                <form action="/addReview" method="post">
 
                     <!-- title  -->
 
