adding a review works, adds to authors, revies and books

--- a/templates/add.html
+++ b/templates/add.html
@@ -110,7 +110,7 @@
                     <div class="form-group row">
                         <label for="review" class="col-sm-3 col-form-label">Review</label>
                         <div class="col-sm-9">
-                            <textarea name="review" class="form-control" id="review" rows=" 3"></textarea>
+                            <textarea name="content" class="form-control" id="review" rows=" 3"></textarea>
                         </div>
                     </div>
 
