--- a/templates/bookreview.html
+++ b/templates/bookreview.html
@@ -34,7 +34,7 @@
         </span>
 
         <!-- =================== HOME ROUTE ===================== -->
-        <form action="/books" method="get" class="form-inline justify-content-end">
+        <form action="/booksPage" method="get" class="form-inline justify-content-end">
             <button class="btn" type="submit" style="color: white;">home</button>
         </form>
 
