--- a/templates/users.html
+++ b/templates/users.html
@@ -36,13 +36,13 @@
 
 
         <!-- =================== HOME ROUTE ===================== -->
-        <form action="/books" method="get" class="form-inline justify-content-end">
+        <form action="/booksPage" method="get" class="form-inline justify-content-end">
             <button class="btn" type="submit" style="color: white;">home</button>
         </form>
 
 
         <!-- ADD BOOKS AND REVIEW ROUTE  -->
-        <form action="/add" method="post" class="form-inline justify-content-end">
+        <form action="/addPage" method="post" class="form-inline justify-content-end">
             <button class="btn" type="submit" style="color: white;">Add Book and Review</button>
         </form>
 
