--- a/templates/users.html
+++ b/templates/users.html
@@ -111,7 +111,7 @@
                 
                 <div class="row">
                     <div class="col">
-                        <a href="#" ></a>
+                        <button type="submit" class="btn btn-link">Link</button>
                     </div>
                 </div>
                
